[tool.poetry]
name = "repl_python3_Bot-a"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
selenium = "^4.1.0"
Flask = "^2.0.2"
textblob = "^0.17.1"
chatbot-py = "^2.74"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
